Update to 26.2 minus major rendering modules